--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+		<service android:enabled="true" android:name=".AccellMeterService" />
     </application>
 </manifest>
